# oRatio-1

./: CMakeLists.txt  main.cpp
core/: core.cpp  core.h
core-lib/tests/: CMakeLists.txt
examples/: test_heuristic_4.rddl
examples/logistics_sv/: logistics_domain.rddl  logistics_problem_0.rddl  logistics_problem_1.rddl  logistics_problem_2.rddl
gui/src/main/java/it/cnr/istc/riddle/: Atom.java  CoreDeserializer.java
smt/: theory.h
smt-lib/: sat_core.h  thread_pool.cpp  thread_pool.h
smt-lib/lra/: lra_theory.cpp  lra_theory.h
smt-lib/tests/: CMakeLists.txt
smt/lra/: lra_theory.cpp
smt/ov/: ov_theory.cpp
solver/: atom_flaw.cpp  composite_flaw.cpp  disjunction_flaw.cpp  graph.cpp  graph.h  smart_type.cpp  smart_type.h  solver.cpp  solver.h  var_flaw.cpp
solver/tests/: CMakeLists.txt
solver/types/: propositional_agent.cpp  propositional_agent.h  propositional_state.cpp  propositional_state.h  reusable_resource.cpp  reusable_resource.h  state_variable.cpp  state_variable.h
