file(GLOB SOLVER_SOURCES test_solver.cpp ${CMAKE_SOURCE_DIR}/smt/*.cpp ${CMAKE_SOURCE_DIR}/smt/lra/*.cpp ${CMAKE_SOURCE_DIR}/smt/ov/*.cpp ${CMAKE_SOURCE_DIR}/riddle/*.cpp ${CMAKE_SOURCE_DIR}/core/*.cpp ${CMAKE_SOURCE_DIR}/solver/*.cpp ${CMAKE_SOURCE_DIR}/solver/types/*.cpp)

if(BUILD_GUI)
    list(APPEND SOLVER_SOURCES ${CMAKE_SOURCE_DIR}/gui/src/main/cpp/socket_listener.cpp)
endif()

add_executable(solver_tests ${SOLVER_SOURCES})

if(BUILD_GUI AND WIN32)
    target_link_libraries(solver_tests wsock32 ws2_32 #[[-PROFILE]])
endif()

add_test(NAME Example00 COMMAND solver_tests "${CMAKE_SOURCE_DIR}/examples/example_0.rddl" "solution.json" WORKING_DIRECTORY ${CMAKE_BINARY_DIR})
add_test(NAME Example01 COMMAND solver_tests "${CMAKE_SOURCE_DIR}/examples/example_1.rddl" "solution.json" WORKING_DIRECTORY ${CMAKE_BINARY_DIR})
add_test(NAME Example02 COMMAND solver_tests "${CMAKE_SOURCE_DIR}/examples/example_2.rddl" "solution.json" WORKING_DIRECTORY ${CMAKE_BINARY_DIR})
add_test(NAME HeuristicTest00 COMMAND solver_tests "${CMAKE_SOURCE_DIR}/examples/test_heuristic_0.rddl" "solution.json" WORKING_DIRECTORY ${CMAKE_BINARY_DIR})
add_test(NAME HeuristicTest01 COMMAND solver_tests "${CMAKE_SOURCE_DIR}/examples/test_heuristic_1.rddl" "solution.json" WORKING_DIRECTORY ${CMAKE_BINARY_DIR})
add_test(NAME HeuristicTest02 COMMAND solver_tests "${CMAKE_SOURCE_DIR}/examples/test_heuristic_2.rddl" "solution.json" WORKING_DIRECTORY ${CMAKE_BINARY_DIR})
add_test(NAME HeuristicTest03 COMMAND solver_tests "${CMAKE_SOURCE_DIR}/examples/test_heuristic_3.rddl" "solution.json" WORKING_DIRECTORY ${CMAKE_BINARY_DIR})
add_test(NAME HeuristicTest04 COMMAND solver_tests "${CMAKE_SOURCE_DIR}/examples/test_heuristic_4.rddl" "solution.json" WORKING_DIRECTORY ${CMAKE_BINARY_DIR})
add_test(NAME TestRR00 COMMAND solver_tests "${CMAKE_SOURCE_DIR}/examples/test_rr_0.rddl" "solution.json" WORKING_DIRECTORY ${CMAKE_BINARY_DIR})
add_test(NAME TestRR01 COMMAND solver_tests "${CMAKE_SOURCE_DIR}/examples/test_rr_1.rddl" "solution.json" WORKING_DIRECTORY ${CMAKE_BINARY_DIR})
add_test(NAME TestSV00 COMMAND solver_tests "${CMAKE_SOURCE_DIR}/examples/test_sv_0.rddl" "solution.json" WORKING_DIRECTORY ${CMAKE_BINARY_DIR})
add_test(NAME TestSV01 COMMAND solver_tests "${CMAKE_SOURCE_DIR}/examples/test_sv_1.rddl" "solution.json" WORKING_DIRECTORY ${CMAKE_BINARY_DIR})
add_test(NAME TestSV02 COMMAND solver_tests "${CMAKE_SOURCE_DIR}/examples/test_sv_2.rddl" "solution.json" WORKING_DIRECTORY ${CMAKE_BINARY_DIR})
#add_test(NAME TestSV03 COMMAND solver_tests "${CMAKE_SOURCE_DIR}/examples/test_sv_3.rddl" "solution.json" WORKING_DIRECTORY ${CMAKE_BINARY_DIR})

add_test( NAME TestBlocks02 COMMAND solver_tests "${CMAKE_SOURCE_DIR}/examples/blocks/blocks_domain.rddl" "${CMAKE_SOURCE_DIR}/examples/blocks/blocks_problem_02.rddl" "solution.json" WORKING_DIRECTORY ${CMAKE_BINARY_DIR} )
add_test( NAME TestBlocks03 COMMAND solver_tests "${CMAKE_SOURCE_DIR}/examples/blocks/blocks_domain.rddl" "${CMAKE_SOURCE_DIR}/examples/blocks/blocks_problem_03.rddl" "solution.json" WORKING_DIRECTORY ${CMAKE_BINARY_DIR} )
add_test( NAME TestBlocks04 COMMAND solver_tests "${CMAKE_SOURCE_DIR}/examples/blocks/blocks_domain.rddl" "${CMAKE_SOURCE_DIR}/examples/blocks/blocks_problem_04.rddl" "solution.json" WORKING_DIRECTORY ${CMAKE_BINARY_DIR} )
add_test( NAME TestBlocks05 COMMAND solver_tests "${CMAKE_SOURCE_DIR}/examples/blocks/blocks_domain.rddl" "${CMAKE_SOURCE_DIR}/examples/blocks/blocks_problem_05.rddl" "solution.json" WORKING_DIRECTORY ${CMAKE_BINARY_DIR} )
add_test( NAME TestBlocks06 COMMAND solver_tests "${CMAKE_SOURCE_DIR}/examples/blocks/blocks_domain.rddl" "${CMAKE_SOURCE_DIR}/examples/blocks/blocks_problem_06.rddl" "solution.json" WORKING_DIRECTORY ${CMAKE_BINARY_DIR} )
add_test( NAME TestBlocks07 COMMAND solver_tests "${CMAKE_SOURCE_DIR}/examples/blocks/blocks_domain.rddl" "${CMAKE_SOURCE_DIR}/examples/blocks/blocks_problem_07.rddl" "solution.json" WORKING_DIRECTORY ${CMAKE_BINARY_DIR} )
add_test( NAME TestBlocks08 COMMAND solver_tests "${CMAKE_SOURCE_DIR}/examples/blocks/blocks_domain.rddl" "${CMAKE_SOURCE_DIR}/examples/blocks/blocks_problem_08.rddl" "solution.json" WORKING_DIRECTORY ${CMAKE_BINARY_DIR} )
add_test( NAME TestBlocks09 COMMAND solver_tests "${CMAKE_SOURCE_DIR}/examples/blocks/blocks_domain.rddl" "${CMAKE_SOURCE_DIR}/examples/blocks/blocks_problem_09.rddl" "solution.json" WORKING_DIRECTORY ${CMAKE_BINARY_DIR} )
add_test( NAME TestBlocks10 COMMAND solver_tests "${CMAKE_SOURCE_DIR}/examples/blocks/blocks_domain.rddl" "${CMAKE_SOURCE_DIR}/examples/blocks/blocks_problem_10.rddl" "solution.json" WORKING_DIRECTORY ${CMAKE_BINARY_DIR} )
add_test( NAME TestBlocks11 COMMAND solver_tests "${CMAKE_SOURCE_DIR}/examples/blocks/blocks_domain.rddl" "${CMAKE_SOURCE_DIR}/examples/blocks/blocks_problem_11.rddl" "solution.json" WORKING_DIRECTORY ${CMAKE_BINARY_DIR} )
add_test( NAME TestBlocks12 COMMAND solver_tests "${CMAKE_SOURCE_DIR}/examples/blocks/blocks_domain.rddl" "${CMAKE_SOURCE_DIR}/examples/blocks/blocks_problem_12.rddl" "solution.json" WORKING_DIRECTORY ${CMAKE_BINARY_DIR} )
add_test( NAME TestBlocks13 COMMAND solver_tests "${CMAKE_SOURCE_DIR}/examples/blocks/blocks_domain.rddl" "${CMAKE_SOURCE_DIR}/examples/blocks/blocks_problem_13.rddl" "solution.json" WORKING_DIRECTORY ${CMAKE_BINARY_DIR} )
add_test( NAME TestBlocks14 COMMAND solver_tests "${CMAKE_SOURCE_DIR}/examples/blocks/blocks_domain.rddl" "${CMAKE_SOURCE_DIR}/examples/blocks/blocks_problem_14.rddl" "solution.json" WORKING_DIRECTORY ${CMAKE_BINARY_DIR} )
add_test( NAME TestBlocks15 COMMAND solver_tests "${CMAKE_SOURCE_DIR}/examples/blocks/blocks_domain.rddl" "${CMAKE_SOURCE_DIR}/examples/blocks/blocks_problem_15.rddl" "solution.json" WORKING_DIRECTORY ${CMAKE_BINARY_DIR} )

set_tests_properties(Example02 HeuristicTest00 HeuristicTest01 PROPERTIES WILL_FAIL TRUE)